@@ -1,0 +1,9 @@
+/* $Id$ */
+
+#ifndef	_BOPENFILE_H
+#define	_BOPENFILE_H
+
+FILE *bopenfile(char *, time_t, off_t, off_t *);
+int  bclosefile(int);
+
+#endif
