@@ -1,0 +1,9 @@
+#ifndef _DIRLOCK_H
+#define _DIRLOCK_H
+
+/* $Id$ */
+
+int	lockdir(char *);
+void	ulockdir(char *);
+
+#endif
