@@ -1,7 +1,6 @@
 /*****************************************************************************
  *
  * $Id$
- * File ..................: mbcico/inbound.c
  * Purpose ...............: Fidonet mailer, inbound functions 
  *
  *****************************************************************************
@@ -31,28 +30,27 @@
 
 #include "../config.h"
 #include "../lib/mbselib.h"
+#include "dirlock.h"
 #include "inbound.h"
 
 
 extern char	*inbound;
 extern char	*tempinbound;
 extern int	gotfiles;
+extern int	laststat;
 
 
 /*
  * Open the inbound directory, set the temp inbound for the node
  * so that this is true multiline safe. All files received from
  * the node during the session are stored here.
+ * For binkp we add one extra directory to queue incoming files.
  */
-
-
-
-
-
-int inbound_open(faddr *addr, int protected)
+int inbound_open(faddr *addr, int protected, int binkp_mode)
 {
     char    *temp;
-    
+    DIR	    *dp;
+
     if (inbound)
 	free(inbound);
     inbound = NULL;
@@ -63,8 +61,22 @@ int inbound_open(faddr *addr, int protected)
 
     temp = calloc(PATH_MAX, sizeof(char));
     snprintf(temp, PATH_MAX -1, "%s/tmp.%d.%d.%d.%d", inbound, addr->zone, addr->net, addr->node, addr->point);
+
+    /*
+     * Check if this directory already exist, it should not unless the previous
+     * session with this node failed for some reason.
+     */
+    if ((dp = opendir(temp))) {
+	Syslog('s', "Binkp: dir %s already exists, previous session failed", temp);
+	laststat++;
+	closedir(dp);
+    }
+
     tempinbound = xstrcpy(temp);
-    snprintf(temp, PATH_MAX -1, "%s/foobar", tempinbound);
+    if (binkp_mode)
+	snprintf(temp, PATH_MAX, "%s/tmp/foobar", tempinbound);
+    else
+	snprintf(temp, PATH_MAX, "%s/foobar", tempinbound);
     mkdirs(temp, 0700);
     free(temp);
 
@@ -86,7 +98,7 @@ int inbound_close(int success)
     struct dirent   *de;
     char	    *source, *dest;
     struct stat	    stb;
-    int		    rc;
+    int		    i, rc;
 
     Syslog('s', "Closing temp inbound after a %s session", success?"good":"failed");
     if (! success) {
@@ -100,6 +112,24 @@ int inbound_close(int success)
 	return 0;
     }
 
+    /*
+     * Try to lock the inbound so we can safely move the files
+     * to the inbound.
+     */
+    i = 30;
+    while (TRUE) {
+	if (lockdir(inbound))
+	    break;
+	i--;
+	if (! i) {
+	    WriteError("Can't lock %s", inbound);
+	    return 1;
+	}
+	sleep(20);
+	Nopper();
+    }
+    Syslog('s', "inbound_close(): %s locked", inbound);
+
     if ((dp = opendir(tempinbound)) == NULL) {
 	WriteError("$Can't open %s", tempinbound);
 	return 1;
@@ -109,8 +139,8 @@ int inbound_close(int success)
     dest   = calloc(PATH_MAX, sizeof(char));
 
     while ((de = readdir(dp))) {
-	snprintf(source, PATH_MAX -1, "%s/%s", tempinbound, de->d_name);
-	snprintf(dest, PATH_MAX -1, "%s/%s", inbound, de->d_name);
+	snprintf(source, PATH_MAX, "%s/%s", tempinbound, de->d_name);
+	snprintf(dest, PATH_MAX, "%s/%s", inbound, de->d_name);
 	if ((lstat(source, &stb) == 0) && (S_ISREG(stb.st_mode))) {
 	    if (file_exist(dest, F_OK) == 0) {
 		Syslog('!', "Cannot move %s to %s, file exists", de->d_name, inbound);
@@ -126,19 +156,35 @@ int inbound_close(int success)
     }
 
     closedir(dp);
-    free(source);
-    free(dest);
+    ulockdir(inbound);
+    Syslog('s', "inbound_close(): %s unlocked", inbound);
 
+    /*
+     * Try to remove binkp tmp queue. Only log if not empty, else
+     * don't log anything, this directory doesn't exist for normal
+     * sessions.
+     */
+    snprintf(source, PATH_MAX, "%s/tmp", tempinbound);
+    if ((rc = rmdir(source))) {
+	if (errno == ENOTEMPTY) {
+	    Syslog('+', "Keep binkp temp incoming directory, partial file");
+	}
+    } else {
+	Syslog('s', "inbound_close(): removed %s", source);
+    }
+    
     /*
      * Try to clean the temp inbound, if it fails log this, maybe the
      * next time it will work.
      */
     if ((rc = rmdir(tempinbound))) {
-	WriteError("Can't remove %s: %s", tempinbound, strerror(rc));
+	WriteError("$Can't remove %s", tempinbound);
     } else {
 	Syslog('s', "inbound_close(): removed %s", tempinbound);
     }
 
+    free(source);
+    free(dest);
     free(tempinbound);
     tempinbound = NULL;
 
